2013-07-03  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Fix 'make check' after the massive deprecations.

	* demos/Makefile.am:
	* demos/gtk-demo/demos.h: Remove example_stockbrowser.cc and
	example_uimanager.cc from the lists of demo files.
	* demos/gtk-demo/example_buttonbox.cc:
	* demos/gtk-demo/example_change_display.cc:
	* demos/gtk-demo/example_dialog.cc:
	* demos/gtk-demo/example_iconview.cc:
	* demos/gtk-demo/example_sizegroup.cc: Replace Gtk::Stock::* by either a
	label or a named icon, as recommended in the gtk+ file gtkstock.h.
	* tests/dialog_deletethis/main.cc: Replace Gtk::Stock::CLOSE by "_Close".
	Call app->hold(). This is necessary because the dialog window is not added
	to the Gtk::Application.
	* tests/property_notification/main.cc: Use the rgba property instead of the
	deprecated color property.

2013-07-02  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Update gtk/src/filelist.am and gtk/gtkmm/filelist.am.

	* gtk/src/filelist.am:
	* gtk/gtkmm/filelist.am: Update the lists of deprecated files.

2013-07-02  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Deprecate Gtk::ActionGroup, *Action, Activatable (sort of), UIManager.

	* gtk/gtkmm/radiobuttongroup.[h|cc]: Deprecate the add() that takes a RadioAction.
	* gtk/src/action.hg: Deprecate Action.
	* gtk/src/actiongroup.hg: Deprecate ActionGroup.
	* gtk/src/activatable.hg: Add a comment that interface Activatable is
	deprecated. Can't do more than that without breaking ABI. It's a base class
	of several classes.
	* gtk/src/radioaction.hg: Deprecate RadioAction.
	* gtk/src/recentaction.hg: Deprecate RecentAction.
	* gtk/src/toggleaction.hg: Deprecate ToggleAction.
	* gtk/src/uimanager.hg: Deprecate UIManager.

	This together with the previous 4 commits should fix the build with
	--enable-warnings=fatal until more API is deprecated in gtk+.
	These commits don't fix 'make check'. The demos use deprecated API.

2013-07-02  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
