@@ -27,7 +27,7 @@ protected:
   virtual void on_checkbutton_toggled();
 
   typedef std::list<Glib::ustring> type_listStrings;
-  virtual void add_row(Gtk::Grid& table, int row, const Glib::RefPtr<Gtk::SizeGroup>& size_group, const Glib::ustring& label_text, const std::list<Glib::ustring>& options);
+  virtual void add_row(Gtk::Grid& grid, int row, const Glib::RefPtr<Gtk::SizeGroup>& size_group, const Glib::ustring& label_text, const std::list<Glib::ustring>& options);
   virtual Gtk::ComboBoxText* create_combobox(const std::list<Glib::ustring>& strings);
 
   virtual void on_response(int response_id);
@@ -37,7 +37,7 @@ protected:
   Gtk::Box m_VBox;
   Gtk::Box m_HBox;
   Glib::RefPtr<Gtk::SizeGroup> m_refSizeGroup;
-  Gtk::Grid m_Table_Color, m_Table_Line;
+  Gtk::Grid m_Grid_Color, m_Grid_Line;
   Gtk::CheckButton m_CheckButton;
 };
 
@@ -67,27 +67,27 @@ Example_SizeGroup::Example_SizeGroup()
    */
   m_VBox.pack_start(m_Frame_Color);
 
-  m_Table_Color.set_border_width(5);
-  m_Table_Color.set_row_spacing(5);
-  m_Table_Color.set_column_spacing(10);
-  m_Frame_Color.add(m_Table_Color);
+  m_Grid_Color.set_border_width(5);
+  m_Grid_Color.set_row_spacing(5);
+  m_Grid_Color.set_column_spacing(10);
+  m_Frame_Color.add(m_Grid_Color);
 
   type_listStrings color_options;
   color_options.push_back("Red");
   color_options.push_back("Green");
   color_options.push_back("Blue");
 
-  add_row(m_Table_Color, 0, m_refSizeGroup, "_Foreground", color_options);
-  add_row(m_Table_Color, 1, m_refSizeGroup, "_Background", color_options);
+  add_row(m_Grid_Color, 0, m_refSizeGroup, "_Foreground", color_options);
+  add_row(m_Grid_Color, 1, m_refSizeGroup, "_Background", color_options);
 
   /* And another frame holding line style options
    */
   m_VBox.pack_start(m_Frame_Line, Gtk::PACK_SHRINK);
 
-  m_Table_Line.set_border_width(5);
-  m_Table_Line.set_row_spacing(5);
-  m_Table_Line.set_column_spacing(10);
-  m_Frame_Line.add(m_Table_Line);
+  m_Grid_Line.set_border_width(5);
+  m_Grid_Line.set_row_spacing(5);
+  m_Grid_Line.set_column_spacing(10);
+  m_Frame_Line.add(m_Grid_Line);
 
 
   type_listStrings dash_options;
@@ -95,14 +95,14 @@ Example_SizeGroup::Example_SizeGroup()
   dash_options.push_back("Dashed");
   dash_options.push_back("Dotted");
 
-  add_row(m_Table_Line, 0, m_refSizeGroup, "_Dashing", dash_options);
+  add_row(m_Grid_Line, 0, m_refSizeGroup, "_Dashing", dash_options);
 
   type_listStrings end_options;
   end_options.push_back("Square");
   end_options.push_back("Round");
   end_options.push_back("Arrow");
 
-  add_row(m_Table_Line, 1, m_refSizeGroup, "_Line ends", end_options);
+  add_row(m_Grid_Line, 1, m_refSizeGroup, "_Line ends", end_options);
 
   /* And a check button to turn grouping on and off */
   m_VBox.pack_start(m_CheckButton, Gtk::PACK_SHRINK);
@@ -128,7 +128,7 @@ void Example_SizeGroup::on_checkbutton_toggled()
   m_refSizeGroup->set_mode(new_mode);
 }
 
-void Example_SizeGroup::add_row(Gtk::Grid& table, int row,
+void Example_SizeGroup::add_row(Gtk::Grid& grid, int row,
                                 const Glib::RefPtr<Gtk::SizeGroup>& size_group,
                                 const Glib::ustring& label_text,
                                 const std::list<Glib::ustring>& options)
@@ -136,14 +136,14 @@ void Example_SizeGroup::add_row(Gtk::Grid& table, int row,
   Gtk::Label* pLabel = Gtk::manage(new Gtk::Label(label_text, true));
   pLabel->set_alignment(Gtk::ALIGN_START, Gtk::ALIGN_END);
 
-  table.attach(*pLabel, 0, 1, row, row + 1);
+  grid.attach(*pLabel, 0, row, 1, 1);
   pLabel->set_hexpand();
 
   Gtk::ComboBoxText* pComboBoxText = create_combobox(options);
   pLabel->set_mnemonic_widget(*pComboBoxText);
   size_group->add_widget(*pComboBoxText);
 
-  table.attach(*pComboBoxText, 1, 2, row, row + 1);
+  grid.attach(*pComboBoxText, 1, row, 1, 1);
 }
 
 /* Convenience function to create an option menu holding a number of strings
