@@ -1,5 +1,15 @@
 2013-07-03  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
 
+	Demos: Fix calls to Gtk::Grid::attach().
+
+	* demos/gtk-demo/example_appwindow.cc:
+	* demos/gtk-demo/example_dialog.cc:
+	* demos/gtk-demo/example_panes.cc:
+	* demos/gtk-demo/example_sizegroup.cc: Fix all calls to Grid::attach().
+	Those calls were not modified properly when Table was replaced by Grid.
+
+2013-07-03  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>
+
 	Fix 'make check' after the massive deprecations.
 
 	* demos/Makefile.am:
